--- a/RC/CMakeLists.txt
+++ b/RC/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../configs/local.cfg)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/env.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/env.h)
 
 # ---------------------------------------------------------------------------- #
 # PROJECT
