--- a/SP/CMakeLists.txt
+++ b/SP/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 3.8)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../configs/local.cfg)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/env.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/env.h)
 
 # ---------------------------------------------------------------------------- #
 # PROJECT
 # name version language
 # ---------------------------------------------------------------------------- #
-project(RC VERSION 1.0 LANGUAGES CXX)
+project(SP VERSION 1.0 LANGUAGES CXX)
 
 # ---------------------------------------------------------------------------- #
 # VARIABLE
 # alias and configurations
 # ---------------------------------------------------------------------------- #
-set(RC_TARGET ${PROJECT_NAME})
+set(SP_TARGET ${PROJECT_NAME})
 
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
@@ -47,64 +49,65 @@ endif()
 # TARGET
 # library
 # ---------------------------------------------------------------------------- #
-add_library(${RC_TARGET}
-  src/RC_ila.cc
+add_library(${SP_TARGET}
+  src/sp_ila.cc
+  src/artifact_utility.cc
 )
 
-target_include_directories(${RC_TARGET} PRIVATE include)
+target_include_directories(${SP_TARGET} PRIVATE include)
 
-target_link_libraries(${RC_TARGET} PUBLIC ilang::ilang)
+target_link_libraries(${SP_TARGET} PUBLIC ilang::ilang)
 
 
 # ---------------------------------------------------------------------------- #
 # TARGET
 # executable
 # ---------------------------------------------------------------------------- #
-add_executable(${RC_TARGET}relchc
+add_executable(${SP_TARGET}relchc
   app/main-relchc.cc
 )
 
 
-target_include_directories(${RC_TARGET}relchc PRIVATE include)
+target_include_directories(${SP_TARGET}relchc PRIVATE include)
 
-target_link_libraries(${RC_TARGET}relchc ${RC_TARGET})
+target_link_libraries(${SP_TARGET}relchc ${SP_TARGET})
 
 # ------------------------------------------------------------------- #
 
-add_executable(${RC_TARGET}pdrabc
+add_executable(${SP_TARGET}pdrabc
   app/main-pdrabc.cc
 )
 
-target_include_directories(${RC_TARGET}pdrabc PRIVATE include)
+target_include_directories(${SP_TARGET}pdrabc PRIVATE include)
 
-target_link_libraries(${RC_TARGET}pdrabc ${RC_TARGET})
+target_link_libraries(${SP_TARGET}pdrabc ${SP_TARGET})
 
 # ------------------------------------------------------------------- #
 
-add_executable(${RC_TARGET}pdrchc
+add_executable(${SP_TARGET}pdrchc
   app/main-pdrchc.cc
 )
 
-target_include_directories(${RC_TARGET}pdrchc PRIVATE include)
+target_include_directories(${SP_TARGET}pdrchc PRIVATE include)
 
-target_link_libraries(${RC_TARGET}pdrchc ${RC_TARGET})
+target_link_libraries(${SP_TARGET}pdrchc ${SP_TARGET})
 
 # ------------------------------------------------------------------- #
 
-add_executable(${RC_TARGET}cvc4sy
+add_executable(${SP_TARGET}cvc4sy
   app/main-cvc4sy.cc
 )
 
-target_include_directories(${RC_TARGET}cvc4sy PRIVATE include)
+target_include_directories(${SP_TARGET}cvc4sy PRIVATE include)
 
-target_link_libraries(${RC_TARGET}cvc4sy ${RC_TARGET})
+target_link_libraries(${SP_TARGET}cvc4sy ${SP_TARGET})
 
 # ------------------------------------------------------------------- #
 
-add_executable(${RC_TARGET}grain
+add_executable(${SP_TARGET}grain
   app/main-grain.cc
 )
 
-target_include_directories(${RC_TARGET}grain PRIVATE include)
+target_include_directories(${SP_TARGET}grain PRIVATE include)
 
-target_link_libraries(${RC_TARGET}grain ${RC_TARGET})
+target_link_libraries(${SP_TARGET}grain ${SP_TARGET})
