--- a/configs/local-artifact.cfg
+++ b/configs/local-artifact.cfg
@@ -3,5 +3,5 @@ set(cmakeCOSAPath "/home/vmcai2020/CoSA/" )
 set(cmakeABCPath "/home/vmcai2020/abc/" )
 set(cmakeYOSYSPath "/home/vmcai2020/yosys/" )
 set(cmakeFREQHORNPath "/home/vmcai2020/grain/" )  
-set(cmakeCVC4Path "/home/vmcai2020/cvc4/" )
+set(cmakeCVC4Path "/home/vmcai2020/cvc4/bin/" )
 set(cmakeZ3Path "")
